# xml-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: compiler_options.cmake  files.cmake  insource_guard.cmake  vcpkg_integration.cmake
res/: test_blender_1.xml  test_monkey.xml  test_monkey_2.xml  test_shadow.xml  test_shadow_plane.xml
src/: dev.h  main.cpp  scene.cpp  scene.hpp  triangle.cpp  triangle.hpp
src/fileio/: ppm.cpp  ppm.hpp  xml_scene_parser.cpp  xml_scene_parser.hpp
src/math/: ray.cpp  ray.hpp  vec3.cpp  vec3.hpp
